kubernetes/historyserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: historyserver
  name: historyserver
spec:
  type: NodePort
  ports:
  - name: "8188"
    port: 8188
    targetPort: 8188
  selector:
    io.kompose.service: historyserver
status:
  loadBalancer: {}
