kubernetes/namenode-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: namenode
  name: namenode
spec:
  type: NodePort
  ports:
  - name: "8020"
    port: 8020
    targetPort: 8020
  - name: "50070"
    port: 50070
    targetPort: 50070
  selector:
    io.kompose.service: namenode
status:
  loadBalancer: {}
